# fastapi_demo

./: .gitignore  Dockerfile  gemini_api.py  n8n-compose.yaml  pyproject.toml  requirements.txt
config/: setting.py
database/: connection.py
firebase/: connection.py  post.py
models/: models.py
qdrant/: main.py
